@@ -72,3 +72,7 @@ TODO: подумать о переделке DataHolder/Tensor/tensormath  в А
 * обновлены комментарии для Doxygen;
 
 * оптимизация Tensor::val();
+* добавлен код для цветного вывода текста в консоль -- Console.hpp
+* статистика по тестированию теперь цветная;
+* добавлен тест на оператор поворота в трехмерном пространстве TestRot3;
+* тест для Layer модифицирован для оператора повортота;
